<resources>

    <string name="app_name">MyPol</string>
    <string name="all">All</string>
    <string name="createnote">Create note</string>
    <string name="closedrawer">Close drawer</string>
    <string name="favorites">Favorite Assemblyman/Bill</string>
    <string name="notes">Notes</string>
    <string name="opendrawer">Open drawer</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="photo">Photo</string>
    <string name="recording">Recording</string>
    <string name="refresh">Refresh</string>
    <string name="reminder">Reminder</string>
    <string name="search">Search</string>
    <string name="shared">Shared</string>
    <string name="sheet_item_pressed">Item pressed</string>
    <string name="snackbar_shared_msg">Gordon Wong shared a note with you.</string>
    <string name="view">View</string>
    <string name="setting">Setting</string>
    <string name="data">Data</string>
    <string name="watchMod">Watching Mod</string>
    <string name="menus">Menus</string>
    <string name="mypol">MyPol</string>
    <string name="comment">Comment</string>
    <string name="assemblyman">Assemblyman</string>
    <string name="profile">Profile</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="mypage_profile">My Profile</string>
    <string name="mypage_settings">Settings</string>
    <string name="extra_info">Extra-Info</string>
    <string name="complete">Complete</string>
    <string name="address_insert">Insert Address</string>
    <string name="birthday_insert">Insert Birthday</string>
    <string name="gender_insert">Select Gender</string>
    <string name="nickname">Nickname</string>

</resources>
