<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_drawer_member_data"
        android:icon="@drawable/ic_file_download_black_48dp"
        android:title="@string/data"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_drawer_member_favorate"
        android:icon="@drawable/ic_star_border_black_48dp"
        android:title="@string/favorites"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_drawer_member_profile"
        android:icon="@drawable/ic_account_circle_black_48dp"
        android:title="@string/profile"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_drawer_member_setting"
        android:icon="@drawable/ic_settings_black_48dp"
        android:title="@string/setting"
        app:showAsAction="always|withText" />

</menu>
