<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/extra_info_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|center_vertical"
    android:orientation="vertical">

    <TextView
        style="@style/dialog_title"
        android:text="@string/extra_info" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/dialog_body"
            android:layout_width="200dp"
            android:text="@string/address_insert" />

        <TextView
            android:id="@+id/text_address"
            style="@style/dialog_body_box"
            android:layout_width="200dp"
            android:clickable="true"
            android:hint="클릭하세요..."
            android:textColor="@color/material_grey_600" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/dialog_body"
            android:layout_width="200dp"
            android:text="@string/birthday_insert" />

        <TextView
            android:id="@+id/text_birthday"
            style="@style/dialog_body_box"
            android:layout_width="100dp"
            android:clickable="true"
            android:hint="클릭하세요..."
            android:textColor="@color/material_grey_600" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/dialog_body"
            android:layout_width="200dp"
            android:text="@string/gender_insert" />

        <RadioGroup
            android:id="@+id/radiogroup_gender"
            style="@style/dialog_body"
            android:layout_margin="0dp"
            android:checkedButton="@+id/radio_male"
            android:orientation="horizontal">

            <RadioButton
                android:id="@id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="남"
                android:textColor="@color/material_grey_600" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="여"
                android:textColor="@color/material_grey_600" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/material_orange_800" />

    <TextView
        android:id="@+id/text_complete"
        style="@style/dialog_button"
        android:layout_gravity="center"
        android:text="@string/complete"
        android:textColor="@color/material_orange_800" />

</LinearLayout>